--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby-cli": "^2.4.3",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-google-analytics": "^2.0.6",
+    "gatsby-plugin-mailchimp": "^3.3.0",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "react-helmet": "^5.2.0"
   },
