--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gatsby-plugin-google-analytics": "^2.0.6",
     "gatsby-plugin-mailchimp": "^3.3.0",
     "gatsby-plugin-react-helmet": "^2.0.10",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-responsive": "^5.0.0"
   },
   "keywords": [
     "gatsby"
