--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-mailchimp": "^3.3.0",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "react-helmet": "^5.2.0",
+    "react-meta-tags": "^0.7.1",
     "react-responsive": "^5.0.0"
   },
   "keywords": [
